--- a/index.html
+++ b/index.html
@@ -1,387 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Million Pixel - View / Buy</title>
-<style>
-:root{
-  --bg:#111; --panel:#1a1a1a; --grid:#222;
-  --avail:#333; --purchased:#0a0; --selected:#00d600; --hover:#00a3ff;
-}
-*{box-sizing:border-box; margin:0; padding:0;}
-body { font-family:Arial,Helvetica,sans-serif; background:var(--bg); overflow:hidden; }
-
-nav{
-  position:fixed; top:0; left:0; right:0; height:60px;
-  background:#222; display:flex; align-items:center; padding:10px 16px; z-index:10;
-}
-nav img{height:30px; margin-right:10px}
-nav h1{color:#0f0; font-size:18px; margin:0 auto 0 0}
-nav a{color:#fff; text-decoration:none; margin-left:16px}
-nav a:hover{color:#0f0}
-
-#canvasContainer{
-  position:absolute; top:60px; left:0; right:0; bottom:0;
-  overflow:hidden; background:var(--bg);
-}
-canvas{ display:block; width:100%; height:100%; background:var(--bg); touch-action:none; }
-
-#buyButton, #modeToggle{
-  position:fixed; top:70px; right:20px;
-  padding:10px 15px; background:#0f0; color:#111; border:none; border-radius:6px; cursor:pointer; z-index:12; font-weight:700;
-  transition:all .2s ease;
-}
-#buyButton:hover, #modeToggle:hover{background:#0c0;}
-
-#sidebar{
-  position:fixed; top:60px; right:-320px; width:320px; bottom:0;
-  background:var(--panel); color:#fff; border-left:1px solid var(--grid);
-  padding:14px; overflow-y:auto; z-index:11; transition:right .25s ease;
-}
-#sidebar.open{ right:0; }
-@media (max-width:768px){
-  #sidebar {
-    right: 0; bottom: -100%; width:100%; height:250px; border-left:none; border-top:1px solid var(--grid);
-    transition: bottom .25s ease;
-  }
-  #sidebar.open { bottom:0; }
-}
-
-.pixelSection{
-  display:flex; gap:8px; align-items:flex-start;
-  border:1px solid var(--grid); border-radius:6px; padding:8px; margin-bottom:8px;
-}
-.pixelSection img{ width:50px; height:50px; object-fit:cover; border-radius:4px; }
-.pixelMeta{ flex:1; font-size:13px; line-height:1.3; }
-.pixelMeta input[type="url"], .pixelMeta input[type="file"]{ width:100%; margin-top:6px; }
-.pixelSection:hover{ background:#0b2a60; cursor:pointer; }
-
-#totalCost{ font-weight:bold; margin-top:8px; }
-#checkout, #clearSelection{
-  margin-top:10px; padding:10px; width:100%;
-  background:#0f0; color:#111; border:none; border-radius:6px; cursor:pointer; font-weight:700;
-}
-#checkout:hover, #clearSelection:hover{background:#0c0}
-
-label.inline{ display:flex; align-items:center; gap:8px; margin:6px 0 8px; font-size:13px }
-
-#messageBar{
-  margin-bottom:10px; color:#0f0; font-weight:bold; text-align:center; font-size:14px;
-  background:rgba(0,255,100,0.1); border-radius:6px; padding:6px;
-  transition:opacity .3s ease;
-}
-</style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Million Pixel</title>
+<link rel="stylesheet" href="style.css">
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+<script src="firebase-config.js"></script>
 </head>
 <body>
 
 <nav>
-  <img src="https://via.placeholder.com/30" alt="Logo">
   <h1>Million Pixel</h1>
   <a href="about.html">About Us</a>
-  <a href="#">Contact Us</a>
+  <a href="contact.html">Contact</a>
 </nav>
-
-<button id="buyButton">Buy Pixels</button>
-<button id="modeToggle">Switch to Visit Mode</button>
 
 <div id="canvasContainer">
   <canvas id="pixelCanvas"></canvas>
 </div>
 
+<button id="buyButton">Buy Pixels</button>
+
 <div id="sidebar">
-  <div id="messageBar">Press "Buy Pixels" and select pixels to start</div>
-  <h2>Selected Pixels</h2>
-  <label class="inline"><input type="checkbox" id="singleLink"> Apply same URL to all</label>
-  <label class="inline"><input type="checkbox" id="applySameImage"> Apply same image to all</label>
-  <label class="inline"><input type="checkbox" id="rectSelectToggle"> Rectangle Selection</label>
+  <div id="messageBar">Click "Buy Pixels" to start</div>
   <div id="pixelList"></div>
-  <div id="totalCost">Total Cost: 0 JOD</div>
   <button id="checkout">Checkout</button>
   <button id="clearSelection">Clear Selection</button>
 </div>
 
-<script>
-const canvas=document.getElementById('pixelCanvas');
-const ctx=canvas.getContext('2d',{alpha:false});
-const container=document.getElementById('canvasContainer');
-const sidebar=document.getElementById('sidebar');
-const pixelList=document.getElementById('pixelList');
-const totalCostEl=document.getElementById('totalCost');
-const singleLinkCheckbox=document.getElementById('singleLink');
-const applySameImageCheckbox=document.getElementById('applySameImage');
-const buyButton=document.getElementById('buyButton');
-const modeToggle=document.getElementById('modeToggle');
-const messageBar=document.getElementById('messageBar');
-const rectSelectToggle=document.getElementById('rectSelectToggle');
-
-const cols=1000,rows=1000;
-let purchasedPixels={"0,0":{link:"https://example.com"}};
-let selectedPixels=[];
-let hoveredCell=null;
-let buyMode=false;
-let purchaseDone=false;
-let scale=1,offsetX=0,offsetY=0,isDragging=false,dragStartX=0,dragStartY=0;
-let rectStart=null;
-
-// --- Canvas Resize & Fit ---
-function resizeCanvas(){
-  const dpr=Math.max(1,window.devicePixelRatio||1);
-  const w=container.clientWidth,h=container.clientHeight;
-  canvas.width=Math.floor(w*dpr); canvas.height=Math.floor(h*dpr);
-  canvas.style.width=w+'px'; canvas.style.height=h+'px';
-  ctx.setTransform(dpr,0,0,dpr,0,0);
-  const fit=Math.min(w/cols,h/rows);
-  scale = fit; offsetX=(w-cols*scale)/2; offsetY=(h-rows*scale)/2;
-  constrainView(); draw();
-}
-window.addEventListener('resize',resizeCanvas);
-
-// --- Coordinate transforms ---
-function screenToWorld(x,y){
-  const rect=canvas.getBoundingClientRect();
-  return {x:(x-rect.left-offsetX)/scale,y:(y-rect.top-offsetY)/scale};
-}
-function worldToCell(x,y){
-  const col=Math.floor(x),row=Math.floor(y);
-  if(col<0||row<0||col>=cols||row>=rows) return null;
-  return {row,col};
-}
-
-// --- Draw ---
-function clearViewport(){ctx.save(); ctx.setTransform(1,0,0,1,0,0); ctx.clearRect(0,0,canvas.width,canvas.height); ctx.restore();}
-function draw(){
-  clearViewport();
-  ctx.save(); ctx.translate(offsetX,offsetY); ctx.scale(scale,scale);
-  ctx.fillStyle='#1b1b1b'; ctx.fillRect(0,0,cols,rows);
-
-  // Purchased
-  for(const key in purchasedPixels){
-    const [r,c]=key.split(',').map(Number);
-    const data=purchasedPixels[key];
-    if(data.img){ const img=new Image(); img.src=data.img; ctx.drawImage(img,c,r,1,1);}
-    else ctx.fillStyle='var(--purchased)'; ctx.fillRect(c,r,1,1);
-  }
-
-  // Selected
-  for(const p of selectedPixels){
-    if(p.image){ const img=new Image(); img.src=p.image; ctx.drawImage(img,p.col,p.row,1,1);}
-    else ctx.fillStyle='var(--selected)'; ctx.fillRect(p.col,p.row,1,1);
-  }
-
-  // Hover
-  if(buyMode && hoveredCell){
-    const key=`${hoveredCell.row},${hoveredCell.col}`;
-    if(!purchasedPixels[key]){ ctx.fillStyle='var(--hover)'; ctx.fillRect(hoveredCell.col,hoveredCell.row,1,1);}
-  }
-
-  // Rectangle preview
-  if(rectStart && rectSelectToggle.checked && hoveredCell){
-    ctx.fillStyle='rgba(0,214,0,0.3)';
-    const rx=Math.min(rectStart.x,hoveredCell.col), ry=Math.min(rectStart.y,hoveredCell.row);
-    const rw=Math.abs(rectStart.x-hoveredCell.col)+1, rh=Math.abs(rectStart.y-hoveredCell.row)+1;
-    ctx.fillRect(rx,ry,rw,rh);
-  }
-
-  ctx.restore();
-}
-
-// --- Drag & Pan ---
-canvas.addEventListener('mousedown', e=>{
-  if(!buyMode) return;
-  const {x,y}=screenToWorld(e.clientX,e.clientY);
-  const cell=worldToCell(x,y);
-  if(rectSelectToggle.checked && cell){ rectStart={x:cell.col,y:cell.row}; }
-  else{ isDragging=true; dragStartX=e.clientX-offsetX; dragStartY=e.clientY-offsetY; }
-});
-window.addEventListener('mousemove', e=>{
-  const {x,y}=screenToWorld(e.clientX,e.clientY);
-  const cell=worldToCell(x,y);
-  if(rectStart && rectSelectToggle.checked){ hoveredCell=cell; draw(); return; }
-  if(!isDragging) return;
-  offsetX=e.clientX-dragStartX; offsetY=e.clientY-dragStartY; constrainView(); draw();
-});
-window.addEventListener('mouseup', e=>{
-  if(rectStart && rectSelectToggle.checked){
-    const {x,y}=screenToWorld(e.clientX,e.clientY); const cell=worldToCell(x,y);
-    if(cell){
-      const rx=Math.min(rectStart.x,cell.col), ry=Math.min(rectStart.y,cell.row);
-      const rw=Math.abs(cell.col-rectStart.x)+1, rh=Math.abs(cell.row-rectStart.y)+1;
-      for(let r = ry; r < ry + rh; r++){
-        for(let c = rx; c < rx + rw; c++){
-          const key=`${r},${c}`;
-          if(purchasedPixels[key]) continue;
-          if(selectedPixels.some(p=>p.row===r && p.col===c)) continue;
-          selectedPixels.push({row:r,col:c,image:null,link:""});
-        }
-      }
-      updateSidebar(); draw();
-    }
-    rectStart=null;
-  }
-  isDragging=false;
-});
-
-// --- Zoom ---
-canvas.addEventListener('wheel', e=>{
-  if(!buyMode) return;
-  e.preventDefault();
-  const zoomFactor=Math.exp((e.deltaY<0?1:-1)*0.12);
-  const prevScale=scale;
-  let next=prevScale*zoomFactor;
-  const minScale=Math.min(container.clientWidth/cols,container.clientHeight/rows);
-  next=Math.max(minScale,Math.min(60,next));
-  const rect=canvas.getBoundingClientRect();
-  const cx=e.clientX-rect.left,cy=e.clientY-rect.top;
-  const worldX=(cx-offsetX)/prevScale,worldY=(cy-offsetY)/prevScale;
-  scale=next; offsetX=cx-worldX*scale; offsetY=cy-worldY*scale;
-  constrainView(); draw();
-},{passive:false});
-
-// Touch zoom
-let lastTouchDist = null;
-canvas.addEventListener('touchstart', e=>{
-  if(e.touches.length===2){ const dx=e.touches[0].clientX-e.touches[1].clientX; const dy=e.touches[0].clientY-e.touches[1].clientY; lastTouchDist=Math.sqrt(dx*dx+dy*dy);}
-});
-canvas.addEventListener('touchmove', e=>{
-  if(e.touches.length===2 && buyMode){
-    e.preventDefault();
-    const dx=e.touches[0].clientX-e.touches[1].clientX; const dy=e.touches[0].clientY-e.touches[1].clientY;
-    const dist=Math.sqrt(dx*dx+dy*dy);
-    if(lastTouchDist){
-      const zoomFactor=dist/lastTouchDist;
-      const prevScale=scale;
-      let next=prevScale*zoomFactor;
-      const minScale=Math.min(container.clientWidth/cols,container.clientHeight/rows);
-      next=Math.max(minScale,Math.min(60,next));
-      const rect=canvas.getBoundingClientRect();
-      const cx=(e.touches[0].clientX+e.touches[1].clientX)/2-rect.left;
-      const cy=(e.touches[0].clientY+e.touches[1].clientY)/2-rect.top;
-      const worldX=(cx-offsetX)/prevScale, worldY=(cy-offsetY)/prevScale;
-      scale=next; offsetX=cx-worldX*scale; offsetY=cy-worldY*scale;
-      constrainView(); draw();
-    }
-    lastTouchDist=dist;
-  }
-},{passive:false});
-canvas.addEventListener('touchend', e=>{ if(e.touches.length<2) lastTouchDist=null; });
-
-// --- Hover ---
-canvas.addEventListener('mousemove', e=>{ hoveredCell=worldToCell(...Object.values(screenToWorld(e.clientX,e.clientY))); draw(); });
-canvas.addEventListener('mouseleave', ()=>{ hoveredCell=null; draw(); });
-
-// --- Click & Select ---
-canvas.addEventListener('click', e=>{
-  const {x,y}=screenToWorld(e.clientX,e.clientY);
-  const cell=worldToCell(x,y);
-  if(!cell) return;
-  const key=`${cell.row},${cell.col}`;
-  
-  if(buyMode){
-    if(purchasedPixels[key]) return;
-    const idx=selectedPixels.findIndex(p=>p.row===cell.row && p.col===cell.col);
-    if(idx>-1) selectedPixels.splice(idx,1);
-    else selectedPixels.push({row:cell.row,col:cell.col,image:null,link:""});
-    updateSidebar(); draw();
-  } else {
-    if(purchasedPixels[key] && purchasedPixels[key].link) window.open(purchasedPixels[key].link,'_blank');
-  }
-});
-
-// --- Sidebar update ---
-function updateSidebar(){
-  sidebar.classList.toggle('open', buyMode);
-  messageBar.style.display = selectedPixels.length>0 ? 'none':'block';
-  pixelList.innerHTML='';
-  selectedPixels.forEach((p,i)=>{
-    const div=document.createElement('div'); div.className='pixelSection'; div.dataset.index=i;
-    div.innerHTML=`<img src="${p.image||'https://via.placeholder.com/50'}" alt="">
-      <div class="pixelMeta">
-        <div><strong>Row:</strong> ${p.row}, <strong>Col:</strong> ${p.col}</div>
-        <input type="url" placeholder="Pixel URL" value="${p.link||''}" class="pixelUrl">
-        <input type="file" accept="image/*" class="pixelImage">
-      </div>`;
-    pixelList.appendChild(div);
-
-    const urlInput=div.querySelector('.pixelUrl');
-    urlInput.addEventListener('input', e=>{ p.link=e.target.value; });
-    const imgInput=div.querySelector('.pixelImage');
-    imgInput.addEventListener('change', e=>{
-      const file=e.target.files[0];
-      if(file){
-        const reader=new FileReader();
-        reader.onload=e2=>{ p.image=e2.target.result; draw(); };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    div.addEventListener('mouseenter', ()=>{ hoveredCell={row:p.row,col:p.col}; draw(); });
-    div.addEventListener('mouseleave', ()=>{ hoveredCell=null; draw(); });
-  });
-  totalCostEl.textContent=`Total Cost: ${selectedPixels.length*0.5} JOD`;
-}
-
-// --- Clear selection ---
-document.getElementById('clearSelection').addEventListener('click', ()=>{
-  selectedPixels=[]; updateSidebar(); draw();
-});
-
-// --- Checkout ---
-document.getElementById('checkout').addEventListener('click', ()=>{
-  if(selectedPixels.length===0) return alert('Select pixels first');
-  // Simulate payment
-  if(confirm(`Pay ${selectedPixels.length*0.5} JOD for ${selectedPixels.length} pixels?`)){
-    selectedPixels.forEach(p=>{
-      const key=`${p.row},${p.col}`;
-      purchasedPixels[key]={link:p.link,img:p.image};
-    });
-    selectedPixels=[]; updateSidebar(); draw();
-    messageBar.textContent='Payment successful! Pixels locked.';
-  }
-});
-
-// --- Buy / Visit Mode toggles ---
-buyButton.addEventListener('click', ()=>{
-  buyMode=!buyMode;
-  sidebar.classList.toggle('open', buyMode);
-  buyButton.textContent=buyMode?'Buying Pixels':'Buy Pixels';
-  if(!buyMode){ selectedPixels=[]; updateSidebar(); draw(); messageBar.textContent='Visit Mode: click purchased pixels to visit URL'; }
-  else messageBar.textContent='Buy Mode: select pixels to purchase';
-});
-modeToggle.addEventListener('click', ()=>{
-  buyMode=!buyMode;
-  sidebar.classList.toggle('open', buyMode);
-  modeToggle.textContent=buyMode?'Switch to Visit Mode':'Switch to Buy Mode';
-  buyButton.textContent=buyMode?'Buying Pixels':'Buy Pixels';
-  if(!buyMode){ selectedPixels=[]; updateSidebar(); draw(); messageBar.textContent='Visit Mode: click purchased pixels to visit URL'; }
-  else messageBar.textContent='Buy Mode: select pixels to purchase';
-});
-
-// --- Apply same URL / Image ---
-singleLinkCheckbox.addEventListener('change', ()=>{
-  if(singleLinkCheckbox.checked && selectedPixels.length>0){
-    const firstLink=selectedPixels[0].link;
-    selectedPixels.forEach(p=>p.link=firstLink); draw(); updateSidebar();
-  }
-});
-applySameImageCheckbox.addEventListener('change', ()=>{
-  if(applySameImageCheckbox.checked && selectedPixels.length>0){
-    const firstImg=selectedPixels[0].image;
-    selectedPixels.forEach(p=>p.image=firstImg); draw(); updateSidebar();
-  }
-});
-
-// --- Constrain view ---
-function constrainView(){
-  const w=cols*scale, h=rows*scale;
-  const cw=container.clientWidth, ch=container.clientHeight;
-  offsetX=Math.min(Math.max(offsetX,cw-w),0);
-  offsetY=Math.min(Math.max(offsetY,ch-h),0);
-}
-
-// --- Initial ---
-resizeCanvas();
-</script>
-
+<script src="main.js"></script>
 </body>
 </html>
